# FdF

./: .gitignore  42.fdf  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  a.out  author  debug.c  draw_lines.c  events.c  events_bonus.c  fdf  fdf.c  fdf.h  hand  handler.c  heal.fdf  keys.h  lines.c  main.c  math_test.c  projection.c  rotation.c  struct.c  test  trash
example/my_maps/: coool.fdf  easy.fdf
libft/: CMakeLists.txt  error_notice.c  fract.c  ft_atoi_base.c  ft_itoa_base.c  ft_putnbr_fd.c  ft_strsplit.c  get_next_line.c  get_next_line.h  libft.h  var_dump.c  vardump.c
libft/inc/: libft.h
libft/src/: CMakeLists.txt  endl.c  error_notice.c  free_str.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_fswap.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_ldel.c  ft_log.c  ft_lst_clear.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow_uint.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  (+41 more)
